# 42_Python_Piscine

python_module_00/ex00/: answers.txt
python_module_00/ex01/: exec.py
python_module_00/ex02/: whois.py
python_module_00/ex03/: count.py
python_module_00/ex04/: operations.py
python_module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
python_module_00/ex06/: recipe.py
python_module_00/ex07/: filterwords.py
python_module_00/ex08/: sos.py
python_module_00/ex09/: guess.py
python_module_00/ex10/: loading.py
python_module_01/ex00/: book.py  recipe.py  test.py
python_module_01/ex01/: game.py
python_module_01/ex02/: test.py  vector.py
python_module_01/ex03/: generator.py
python_module_01/ex04/: eval.py
python_module_01/ex05/: the_bank.py
python_module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
python_module_02/ex01/: main.py
python_module_02/ex02/: logger.py
python_module_02/ex03/: csvreader.py  test.py
python_module_02/ex04/: build.sh
python_module_02/ex04/packaging_tutorial/: pyproject.toml
python_module_02/ex04/packaging_tutorial/src/my_minipack/: loading.py  logger.py
python_module_02/ex05/: TinyStatistician.py
