[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_minipack"
version = "1.0.0"
authors = [
    { name="Ana Rebelo", email="arebelo@student.42barcelona.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
